legend alignment, ACLED fix

--- a/ar/css/main_ar.css
+++ b/ar/css/main_ar.css
@@ -187,6 +187,7 @@
         font-family: 'Libre Franklin', sans-serif;
         font-weight: 400;
         font-size: small;
+        text-align: right;
     }
 
     .legend h4 {
@@ -199,7 +200,7 @@
     }
 
     ul.legend-ul li {
-      float: left;
+      float: right;
       padding-right: 10px;
     }
 
